# dymer-forms/routes/publicfiles.js
@@ -7,7 +7,7 @@ const path = require('path');
 /* GET home page. */
 const nameFile = path.basename(__filename);
 router.get("*", cors(), function(req, res, next) {
-    // #swagger.tags = ['Forms']
+    // #swagger.tags = ['Models']
 
     console.log(nameFile + ' | get  :', req._parsedUrl.pathname);
     res.sendFile(path.join(__dirname + "/../uploads" + req._parsedUrl.pathname));
