# dymer-forms/routes/routes-v1.js
@@ -60,7 +60,7 @@ mongoose.connect(mongoURI, {
     });
 
 router.get('/mongostate', (req, res) => {
-    // #swagger.tags = ['Forms']
+    // #swagger.tags = ['Models']
 
     let ret = new jsonResponse();
     let dbState = [{
@@ -171,7 +171,7 @@ var recFile = function(file_id) {
  */
 
 router.get('/dettagliomodel', [util.checkIsDymerUser], (req, res) => {
-    // #swagger.tags = ['Forms']
+    // #swagger.tags = ['Models']
 
     var ret = new jsonResponse();
     let callData = util.getAllQuery(req);
@@ -191,7 +191,7 @@ router.get('/dettagliomodel', [util.checkIsDymerUser], (req, res) => {
 });
 
 router.get('/', [util.checkIsDymerUser], (req, res) => {
-    // #swagger.tags = ['Forms']
+    // #swagger.tags = ['Models']
 
     var ret = new jsonResponse();
     let callData = util.getAllQuery(req);
@@ -216,7 +216,7 @@ router.get('/', [util.checkIsDymerUser], (req, res) => {
 });
 
 router.get('/content/:entype/:fileid', function(req, res, next) {
-    // #swagger.tags = ['Forms']
+    // #swagger.tags = ['Models']
 
     var file_id = req.params.fileid;
     //   console.log("file_id", file_id);
@@ -243,7 +243,7 @@ router.get('/content/:entype/:fileid', function(req, res, next) {
 });
 
 router.post('/', util.checkIsAdmin, function(req, res) {
-    // #swagger.tags = ['Forms']
+    // #swagger.tags = ['Models']
 
     var ret = new jsonResponse();
     upload(req, res, function(err) {
@@ -304,7 +304,7 @@ router.post('/', util.checkIsAdmin, function(req, res) {
 });
 
 router.post('/create', util.checkIsAdmin, function(req, res) {
-    // #swagger.tags = ['Forms']
+    // #swagger.tags = ['Models']
 
     var ret = new jsonResponse();
     upload(req, res, function(err) {
@@ -339,7 +339,7 @@ router.post('/create', util.checkIsAdmin, function(req, res) {
 });
 
 router.post('/addAsset', util.checkIsAdmin, function(req, res) {
-    // #swagger.tags = ['Forms']
+    // #swagger.tags = ['Models']
 
     var ret = new jsonResponse();
     upload(req, res, function(err) {
@@ -378,7 +378,7 @@ router.post('/addAsset', util.checkIsAdmin, function(req, res) {
 });
 
 router.post('/update', util.checkIsAdmin, function(req, res) {
-    // #swagger.tags = ['Forms']
+    // #swagger.tags = ['Models']
 
     var ret = new jsonResponse();
     upload(req, res, function(err) {
@@ -419,7 +419,7 @@ router.post('/update', util.checkIsAdmin, function(req, res) {
 });
 
 router.post('/updatestructure', util.checkIsAdmin, function(req, res) {
-    // #swagger.tags = ['Forms']
+    // #swagger.tags = ['Models']
 
     var ret = new jsonResponse();
     upload(req, res, function(err) {
@@ -461,7 +461,7 @@ router.post('/updatestructure', util.checkIsAdmin, function(req, res) {
 });
 
 router.post('/updateAsset', util.checkIsAdmin, function(req, res) {
-    // #swagger.tags = ['Forms']
+    // #swagger.tags = ['Models']
 
     var ret = new jsonResponse();
     upload(req, res, function(err) {
@@ -555,7 +555,7 @@ router.post('/updateAsset', util.checkIsAdmin, function(req, res) {
 });
 
 router.delete('/:id', util.checkIsAdmin, (req, res) => {
-    // #swagger.tags = ['Forms']
+    // #swagger.tags = ['Models']
 
     var ret = new jsonResponse();
     var id = req.params.id;
@@ -581,7 +581,7 @@ router.delete('/:id', util.checkIsAdmin, (req, res) => {
 });
 
 router.delete('/:id/:fid', util.checkIsAdmin, (req, res) => {
-    // #swagger.tags = ['Forms']
+    // #swagger.tags = ['Models']
 
     var ret = new jsonResponse();
     var id = req.params.id;
